--- a/custom.css
+++ b/custom.css
@@ -458,7 +458,8 @@ border: 1px solid #ccc;
 /*padding: 0.8em 1.3em;*/
 }
 
-body.node-type-project fieldset.collapsible {
+body.node-type-project fieldset.collapsible, 
+body.page-info fieldset.collapsible {
 border: 1px solid #ccc;
 padding: .6em 1em 1em 1em;
 }
@@ -1221,7 +1222,7 @@ margin-top: 0;
 padding: 10px 480px 10px 10px;
 }
 
-.field-field-smallteaser {
+.field-field-smallteaser, .field-field-eventteaser {
 float: left;
 padding: 0 10px 10px 0;
 }
@@ -1849,7 +1850,7 @@ body #space-tools .block-title, body #header .block-widget .block-content, body 
 
 .dropdown-blocks .block-toggle .pane-right li {
     float: left;
-    width: 70px;
+    width: 80px;
 }
 .dropdown-blocks .block-toggle .pane-right li a {
 	padding: 2px 10px;
