increases fon-size of linked node titles in views tables

--- a/update.css
+++ b/update.css
@@ -52,6 +52,9 @@ input, select, textarea, body {
 	#page-tools .page-title, #page .node-title, #context-block-region-content .node-title { height: auto !important; font-size: 18px; text-transform: uppercase; font-weight: bold; line-height: 21.6px}
   #page .view-content h2.node-title, #context-block-region-content .view-content h2.node-title { text-transform: none; font-size: 18px;}
   #page .view-content h2.node-title a, #context-block-region-content .view-content h2.node-title a { font-size: 18px; }
+  
+  .views-table .views-field.title a { font-size: 13px; }
+  
 /* Abstaende */
 p { margin-bottom: 1em; }
 dl, hr, pre, address, fieldset, ol, ul, table { margin-bottom: 2.5em; }
