--- a/update.css
+++ b/update.css
@@ -355,13 +355,17 @@ label.over-apply { position: relative !important; padding: 5px 0 4px 0; color: #
     line-height: 19.8px;
 }
 
-/* needs antoher solution
-#content img {
-  float: left;
-  margin: 10px;
-  margin-left: 0px;
+/* float fix for tinymce editor. */
+#content img.right {
+    float: right;
+    margin: 0.8em 0em 0.8em 1em;
 }
-*/
+
+/* float fix for tinymce editor. */
+#content img.left {
+  float: left;
+  margin: 0.55em 0.8em 0.05em 0em;
+}
 
 /* Vermischtes */
 #main-squeeze p.long { color: #404040; width: auto; top: auto; }
