--- a/update.css
+++ b/update.css
@@ -358,12 +358,12 @@ label.over-apply { position: relative !important; padding: 5px 0 4px 0; color: #
 }
 
 /* float fix for tinymce editor. */
-#content img.right {
+img.right {
     float: right;
     margin: 0.8em 0em 0.8em 1em;
 }
 /* float fix for tinymce editor. */
-#content img.left {
+img.left {
   float: left;
   margin: 0.55em 0.8em 0.05em 0em;
 }
