--- a/update.css
+++ b/update.css
@@ -52,7 +52,7 @@ input, select, textarea, body {
 	#page-tools .page-title, #page .node-title, #context-block-region-content .node-title { height: auto !important; font-size: 18px; text-transform: uppercase; font-weight: bold; line-height: 21.6px}
   #page .view-content h2.node-title, #context-block-region-content .view-content h2.node-title { text-transform: none; font-size: 18px;}
   #page .view-content h2.node-title a, #context-block-region-content .view-content h2.node-title a { font-size: 18px; }
-  #page-tools h2.node-title { font-size: 18px; font-weight: 700; text-transform: uppercase;}
+  #page-tools h2.node-title { font-size: 18px !important; font-weight: 700 !important; text-transform: uppercase !important;}
   
   
   .views-table .views-field.title a { font-size: 13px; }
@@ -358,12 +358,12 @@ label.over-apply { position: relative !important; padding: 5px 0 4px 0; color: #
 }
 
 /* float fix for tinymce editor. */
-img.right {
+.content img.right {
     float: right;
     margin: 0.8em 0em 0.8em 1em;
 }
 /* float fix for tinymce editor. */
-img.left {
+.content img.left {
   float: left;
   margin: 0.55em 0.8em 0.05em 0em;
 }
