--- a/custom.css
+++ b/custom.css
@@ -339,6 +339,26 @@ font-size: 12px;
 font-weight: normal !important;
 color: #666;
 }
+
+.field-type-content-taxonomy ul {
+  list-style-type: none;
+  margin-bottom: 0; 
+}
+
+.field-type-content-taxonomy ul li {
+  float: left;
+  
+}
+
+.field-type-content-taxonomy ul li:after {
+  content: ", ";
+}
+
+.field-type-content-taxonomy ul:last-child:after 
+  content: "";
+}
+
+
 /*****************************/
 /* Page Title */
 /****************************/
