--- a/custom.css
+++ b/custom.css
@@ -350,7 +350,7 @@ color: #666;
 .field-type-content-taxonomy ul li {
   list-style-type: none;
   display: inline;
-  margin-left: 0;
+  margin-left: 0 !important;
 }
 
 .field-type-content-taxonomy ul li:after {
