--- a/custom.css
+++ b/custom.css
@@ -357,7 +357,7 @@ div.content .field-type-content-taxonomy ul li:after {
   content: ", ";
 }
 
-div.content .field-type-content-taxonomy ul:last-child:after {
+div.content .field-type-content-taxonomy ul li:last-child:after {
   content: "";
 }
 
