--- a/update.css
+++ b/update.css
@@ -342,8 +342,8 @@ tr.even, tr.odd { /*background: #F9F9F9;*/ }
 
 /* Announcement */
 #announcement .block { background-color: #F9F9F9; border-color: #404040; }
-.node.sticky { border: 1px solid #ccc !important; background-color: #f9f9f9 !important; padding: 1em; margin: 1em 0 1em 0; }
-body.page-node.node-type-project .node.sticky, body.page-node.node-type-event .node.sticky  { border: 0 !important; background-color: transparent !important; padding: 0 !important; margin: 0 !important; }
+.node.sticky { border: 1px solid #ccc; background-color: #f9f9f9; padding: 1em; margin: 1em 0 1em 0; }
+body.page-node.node-type-project .node.sticky, body.page-node.node-type-event .node.sticky  { border: 0; background-color: transparent; padding: 0; margin: 0; }
 /* Forms */ 
 input, select { padding: 2px; border: none !important; }
 input[type=text],input[type=password], select { border: #404040 1px solid !important;  }
