--- a/update.css
+++ b/update.css
@@ -343,7 +343,7 @@ tr.even, tr.odd { /*background: #F9F9F9;*/ }
 /* Announcement */
 #announcement .block { background-color: #F9F9F9; border-color: #404040; }
 .node.sticky { border: 1px solid #ccc; background-color: #f9f9f9; padding: 1em; margin: 1em 0 1em 0; }
-body.node-type-project .node.sticky, body.node-type-event .node.sticky  { border: 0; background-color: transparent; padding: 0; margin: 0; }
+body.node-type-blog .node.sticky, body.node-type-event .node.sticky  { border: 0; background-color: transparent; padding: 0; margin: 0; }
 /* Forms */ 
 input, select { padding: 2px; border: none !important; }
 input[type=text],input[type=password], select { border: #404040 1px solid !important;  }
