--- a/custom.css
+++ b/custom.css
@@ -1712,7 +1712,7 @@ border:1px solid #BBBBBB;
 /** Changes to OA **/
 
 div.node {
-  border:  none !important;
+  border:  none;
 }
 
 
@@ -2094,12 +2094,13 @@ div.pager .minipager .clear-block {
 
 /* OA Folders features */
 .atrium-folders-navigator .left { width: 28%; }
-.atrium-folders-navigator a { color: #fff !important; }
-.atrium-folders-navigator ul.links  { width: 100% !important; margin: 0 0 10px 0; }
+.atrium-folders-navigator a { color: #fff !important; margin-left: 0;}
+.atrium-folders-navigator ul.links  { width: 100% !important; margin: 0 0 10px 0; padding: 0;}
+.atrium-folders-navigator ul.links li { margin-left: 0 !important; }
+.atrium-folders-navigator div.buttons { padding: 0; }
 
-.dropzone.dropzone-upload #attachments { width: 100%; position:relative; left: -100%; }
-.dropzone.dropzone-upload #attachments .left { width: 70% }
-.dropzone.dropzone-upload #attachments .right {width: 28% }
+.dropzone.dropzone-upload #attachments { width: 100%; position:relative; }
+
 
 
 /* Twitter Form Field */
