Termine Font set to 13.2px

--- a/update.css
+++ b/update.css
@@ -385,8 +385,15 @@ label.over-apply { position: relative !important; padding: 5px 0 4px 0; color: #
     height: 45px; 
 }
 
+
 div.node .field .field-label-inline-first {
   font-size: 10px;
+}
+
+
+/* Termin: */
+div.content div.field-items span.date-display-single {
+  font-size: 13.2px;
 }
 
 /* loescht redundante titel und beschreibungsinformationen im project info*/
