--- a/update.css
+++ b/update.css
@@ -388,6 +388,11 @@ label.over-apply { position: relative !important; padding: 5px 0 4px 0; color: #
 
 div.node .field .field-label-inline-first {
   font-size: 10px;
+  padding: 0px 5px;
+  width: 70px !important;
+  display: block;
+  float: left;
+  margin: 0 10px 5px 0;
 }
 
 
