--- a/update.css
+++ b/update.css
@@ -408,6 +408,11 @@ div.content div.field-items span.date-display-single {
   font-size: 13.2px;
 }
 
+div.content ul.links {
+  font-size: 13.2px;
+}
+
+
 /* loescht redundante titel und beschreibungsinformationen im project info*/
 .view-info-listing .view-content h2.node-title {
   display: none;
