changeds string for first line of noderef view for projectinst. to mark leader, refs #228

--- a/custom.css
+++ b/custom.css
@@ -2070,7 +2070,7 @@ table th {
 }
 
 .node-type-project .field-field-ref-projectinstitutions .views-row-first .title a:after {
-   content: "<br />Konsortialführer";
+   content: " (Konsortialführer)";
 }
 
 div.litecal .litecal-data .views-field.title { 
