added styles for extending submenu links to include icons, refs #207

--- a/update.css
+++ b/update.css
@@ -157,7 +157,6 @@ body.page-search #search-form #edit-keys-wrapper { border: 0; padding: 0; }
 	#block-nice_menus-2 .nice-menu li ul li a { padding: 3px 1px !important; color: #404040; margin: 0 !important; height: auto !important;  }
 	#block-nice_menus-2 .nice-menu li ul li a:hover { text-decoration: none; margin: 0 !important; color: #000; }
 
-
 /* Paginierung */
 
 	.item-list .pager { margin: 35px 0 0 0 !important; padding: 15px 0 !important; border-top: #404040 1px solid; text-align: left !important; }
@@ -166,15 +165,10 @@ body.page-search #search-form #edit-keys-wrapper { border: 0; padding: 0; }
 	.item-list .pager li a:hover { color: #EEE; }
 
 
-/* Navigationen im linken Block */
-	
-	#sidebar-left li.leaf, #sidebar-left li.expanded { border-color: #404040; border-style: solid; padding: 6px 2px; }
-	#sidebar-left li.leaf a, #sidebar-left li.expanded a { color: #404040; }
-	#sidebar-left li.leaf.active, #sidebar-left li.expanded.active { font-weight: bold;}
-
 /* Navigation im Rechten Block */
   .block .menu ul, .block .menu ul ul { border-color: #fff; margin-bottom: 0;}
-  
+  .block .menu a, .drilldown .menu a { margin-left: 0; padding-left: 25px; }
+  .block .menu a:hover, .drilldown .menu a:hover { background: white url(/profiles/openatrium/themes/ginkgo/images/sprite_base.png) 0px -60px no-repeat}
 
 /* Bloecke */
 	
