--- a/custom.css
+++ b/custom.css
@@ -1810,12 +1810,6 @@ h2.node-title {
   margin-top: 7px;
 }
 
-.context-links {
-	border-left: 0;
-  position: relative;
-  z-index: 10;
-}
-
 #features-menu li {
 	margin-left: 0;
 }
@@ -2000,6 +1994,12 @@ table th {
     -moz-border-radius:5px;
     -webkit-border-radius:5px;
     }
+
+#right .context-links {
+	border-left: 0;
+  position: relative;
+  z-index: 10;
+}
 
 #right .context-links a:active { background-position:0px 100%; }
 #right .context-links { padding: 0; margin-top: 12px; } 
