--- a/custom.css
+++ b/custom.css
@@ -2159,13 +2159,14 @@ display: none;
 }
 .block-content .view-event-listing td.views-field-title {
   padding: 0 0 0 4px;
-  margin-bottom: 6px;
+  border-bottom: 6px solid #fff;
 }
 
 .block-content .view-event-listing td.views-field-date {
   width: 50px;
   border-right: 1px solid #ccc;
   padding: 0 6px 0 0;
+  border-bottom: 6px solid #fff;
 }
 
 .block-content .view-event-listing .date-display-end {
