grant tab gave formatting issues due to float left in node-title

--- a/custom.css
+++ b/custom.css
@@ -1805,8 +1805,8 @@ margin-left: 0.4em;
 }
 
 h2.node-title {
-  width 65%;
-  float: left;
+  width: 65%;
+  float: none;
   margin-top: 7px;
 }
 
