--- a/custom.css
+++ b/custom.css
@@ -1772,7 +1772,7 @@ background: #404040 !important;
   height:60px;
   background-image: url('images/sprite_skin.png');
   background-repeat:no-repeat;
-  background-position: 80% -480px;
+  background-position: 174px -480px;
   }
 
 #global .notice {
