--- a/thorsten.css
+++ b/thorsten.css
@@ -4,3 +4,11 @@
 .content .field-item {
 	clear: both;
 }
+
+.upload_attachments.last > a {
+	font-size: 10px;
+}
+
+.upload_attachments.last >a:before {
+	content: " | ";
+;
