--- a/custom.css
+++ b/custom.css
@@ -1776,6 +1776,22 @@ background: #404040 !important;
   background-repeat:no-repeat;
   background-position: 174px -480px;
   }
+ 
+  
+  #navigation a.demoscreenlogo {
+  display: block;
+  float: left;
+  text-indent:-999px;
+  overflow:hidden;
+  margin-top: -15px;
+
+  width: 220px;
+  height:60px;
+  background-image: url('images/sprite_skin.png');
+  background-repeat:no-repeat;
+  background-position: -240px -420px;
+  }
+  
 
 #global .notice {
 font-weight: bold;
