--- a/demoscreen_oa/demoscreen.css
+++ b/demoscreen_oa/demoscreen.css
@@ -21,6 +21,12 @@
   margin-left: -180px;
 }
 
+#navigation a.demoscreenlogo {
+  background-image: url("images/sprite_skin.png") !important;
+
+}
+
+
 body.demoscreen_book #navigation a.logo {
   background-image: url("images/sprite_skin.png") !important;
   width: 60px;
